--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "license": "MIT",
   "description": "A personal profile rebuild project utilizing Vite, GSAP, and Locomotive Scroll for dynamic scrolling effects.",
   "scripts": {
-    "start": "vite src --port 3000",
-    "dev": "vite src --port 3000",
-    "build": "vite build src",
-    "preview": "vite preview"
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "keywords": [
     "profile",
@@ -21,8 +22,9 @@
   ],
   "author": "Hemanth V.",
   "devDependencies": {
-    "vite": "^5.2.9",
-    "sass": "^1.62.0"
+    "gh-pages": "^6.2.0",
+    "sass": "^1.62.0",
+    "vite": "^5.2.9"
   },
   "dependencies": {
     "gsap": "^3.7.0",
